--- a/View Events.html
+++ b/View Events.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <h1>HELLO</h1>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
     <script src="assets/js/sidebar-menu.js"></script>
