--- a/index.html
+++ b/index.html
@@ -1,57 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="text-dark" lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Hackthon</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap1.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700">
-    <link rel="stylesheet" href="assets/css/Advanced-NavBar---Multi-dropdown.css">
-    <link rel="stylesheet" href="assets/css/animated-textbox-textbox.css">
-    <link rel="stylesheet" href="assets/css/animated-textbox.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Black-Navbar.css">
-    <link rel="stylesheet" href="assets/css/Juvi---Push-Empty-Space-20px.css">
-    <link rel="stylesheet" href="assets/css/NZ---TextboxLabel.css">
+    <link rel="stylesheet" href="assets/css/Dark-NavBar-Navigation-with-Button.css">
+    <link rel="stylesheet" href="assets/css/Dark-NavBar-Navigation-with-Search.css">
+    <link rel="stylesheet" href="assets/css/Dark-NavBar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
+    <link rel="stylesheet" href="assets/css/icon-star-full.css">
     <link rel="stylesheet" href="assets/css/Section-Title.css">
-    <link rel="stylesheet" href="assets/css/sidebar-menu.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/textarea.css">
 </head>
 
-<body class="bg-dark m-auto">
-    <!-- Start: Section Title -->
-    <div class="bg-dark title-div" style="backdrop-filter: contrast(104%);margin-top: 12px;">
-        <h1 class="text-white-50">Home</h1><!-- Start: Juvi - Push Empty Space 20px -->
-        <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
-    </div><!-- End: Section Title -->
-    <!-- Start: Juvi - Push Empty Space 20px -->
-    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
-    <!-- Start: Black Navbar -->
-    <nav class="navbar navbar-light navbar-expand-md navbar-fixed-top navigation-clean-button" style="background: rgb(34, 34, 34);border-radius: 20;border-top-left-radius: 20;border-top-right-radius: 20;border-bottom-right-radius: 20;border-bottom-left-radius: 20;border-style: none;padding-top: 0;padding-bottom: 10px;transform: perspective(0px) scale(1);height: 60px;">
+<body class="bg-dark">
+    <div class="bg-dark title-div">
+        <h1 class="fs-4 text-light bg-dark">Home</h1>
+    </div>
+    <nav class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button" style="background: rgb(34, 34, 34);border-radius: 20;border-top-left-radius: 20;border-top-right-radius: 20;border-bottom-right-radius: 20;border-bottom-left-radius: 20;border-style: none;padding-top: 0;padding-bottom: 10px;">
         <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div><a class="navbar-brand" href="#"><span>Creativarian </span> </a></div>
+            <div><a class="navbar-brand" href="index.html"><span><img width="100px" height="100px" src="/assets/img/logo.png"></span> </a></div>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(255,255,255);">
                 <ul class="navbar-nav nav-right">
-                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color: rgba(224,217,217,0.9);">home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="View Events.html" style="color: rgba(224,217,217,0.9);">View Events </a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html" style="color: rgba(224,217,217,0.9);">faq </a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html" style="color: rgba(224,217,217,0.9);">contact </a></li>
-                </ul><!-- Start: Actions -->
-                <p class="ms-auto navbar-text actions"><a class="login" href="Login%20Page.html" style="color: rgba(224,217,217,0.9);">Log In</a> <a class="btn btn-light action-button" role="button" href="Sign%20up%20Page.html" style="color: rgba(224,217,217,0.9);background: var(--bs-gray-900);border-radius: 10px;border-style: solid;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Sign Up</a></p><!-- End: Actions -->
+                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color: rgba(224,217,217,0.9);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="viewEvents.html" style="color: rgba(224,217,217,0.9);">View Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html" style="color: rgba(224,217,217,0.9);">Calendar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="faq.html" style="color: rgba(224,217,217,0.9);">Notification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="yourEvents.html" style="color: rgba(224,217,217,0.9);">Your event</a></li>
+                </ul>
+                <p class="ms-auto navbar-text actions"><a class="login" href="login.html" style="color: rgba(224,217,217,0.9);">Log In</a> <a class="btn btn-light action-button" role="button" href="signup.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200);border-radius: 10px;border-style: solid;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Sign Up</a></p>
             </div>
         </div>
-    </nav><!-- End: Black Navbar -->
-    <p></p><!-- Start: textarea -->
-    <form>
-        <div class="field"></div>
-    </form><!-- End: textarea -->
-    <h1 class="fs-4 text-white-50 float-start" style="margin-left: 79px;padding-left: 0px;">Calendar</h1>
-    <h1 class="fs-4 text-white-50" style="margin-left: 261px;">Categary</h1>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
-    <script src="assets/js/sidebar-menu.js"></script>
+    </nav>
+
+    <script src="assets/bootstrap/js/bootstrap1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
+    <script src="assets/js/Lightbox-Gallery.js"></script>
 </body>
 
 </html>
