--- a/backendWork.html
+++ b/backendWork.html
@@ -42,7 +42,7 @@
     </script>
   </head>
 
-  <body onload='retrieve("event_group", "notes", "title", "event_type")'>
+  <body onload='retrieve()'>
     <h1>Title!</h1>
     <p>Display:</p>
     <button onclick="getTags()">SortTags</button>
