--- a/viewEvents.html
+++ b/viewEvents.html
@@ -19,18 +19,16 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/css/Black-Navbar.css" />
 
-
-   
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css"
     />
-   
+
     <link rel="stylesheet" href="assets/css/Section-Title.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
-  <body class="bg-dark" onload="retrieve(event_group,notes,title,event_type)">
+  <body class="bg-dark" onload="retrieve();">
     <div class="bg-dark title-div">
       <h1 class="fs-4 text-light bg-dark">View Events</h1>
     </div>
@@ -149,23 +147,47 @@
               you!</span
             >
           </p>
-          <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" onchange="getTags()">
-            <option selected>Open this select menu</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
+          <select
+            class="form-select form-select-lg mb-3"
+            id="menu"
+            aria-label=".form-select-lg example"
+            onchange="search(this.value)"
+          ></select>
+         
+          <table class="table table-light table-striped" id="table">
+            <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                </tr>
+
+              </tbody>
+        </table>
         </div>
       </div>
       <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
         <p id="gTag"></p>
- 
+
       </div>
     </div>
-    <script src="/backend/ViewEvents.js" >
-    </script>
+    <script src="/backend/ViewEvents.js"></script>
     <script src="assets/bootstrap/js/bootstrap1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
-    
   </body>
 </html>
