--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about.html"
+                href="calendar.html"
                 style="color: rgba(224, 217, 217, 0.9)"
                 >Calendar</a
               >
