--- a/viewEvents.html
+++ b/viewEvents.html
@@ -87,7 +87,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about.html"
+                href="calendar.html"
                 style="color: rgba(224, 217, 217, 0.9)"
                 >Calendar</a
               >
@@ -153,37 +153,12 @@
             aria-label=".form-select-lg example"
             onchange="search(this.value)"
           ></select>
-         
-          <table class="table table-light table-striped" id="table">
-            <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
 
-              </tbody>
-        </table>
+          <table class="table table-light table-striped" id="table"></table>
         </div>
       </div>
       <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
         <p id="gTag"></p>
-
       </div>
     </div>
     <script src="/backend/ViewEvents.js"></script>
