--- a/calendar.html
+++ b/calendar.html
@@ -111,12 +111,12 @@
         <section class="b">
             <p class="subtitle">Category</p>
             <div class="images">
-                <img src="assets/img/aboriginal.jpg">
-                <img src="assets/img/tech.jpg">
-                <img src="assets/img/food.jpg">
-                <img src="assets/img/market.jpg">
-                <img src="assets/img/music.jpg">
-                <img src="assets/img/outdoor.jpg">
+                <img src="assets/img/sport.jpg">
+                <img src="assets/img/recreation.jpg">
+                <img src="assets/img/inof.jpg">
+                <img src="assets/img/community.jpg">
+                <img src="assets/img/board.jpg">
+                <img src="assets/img/others.jpg">
             </div>
         </section>
     </section>
