--- a/calendar.html
+++ b/calendar.html
@@ -19,9 +19,10 @@
     <link rel="stylesheet" href="assets/css/Section-Title.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/calendarCss.css" />
+    <script src="/backend/CalenderEvents.js"></script>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark" onload="retrieve()">
     <div class="bg-dark title-div">
         <h1 class="fs-4 text-light bg-dark">View Events</h1>
     </div>
