--- a/Login Page.html
+++ b/Login Page.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Advanced-NavBar---Multi-dropdown.css">
     <link rel="stylesheet" href="assets/css/animated-textbox-textbox.css">
     <link rel="stylesheet" href="assets/css/animated-textbox.css">
@@ -15,6 +16,8 @@
     <link rel="stylesheet" href="assets/css/Juvi---Push-Empty-Space-20px.css">
     <link rel="stylesheet" href="assets/css/NZ---TextboxLabel.css">
     <link rel="stylesheet" href="assets/css/Section-Title.css">
+    <link rel="stylesheet" href="assets/css/Sidebar-Menu-1.css">
+    <link rel="stylesheet" href="assets/css/Sidebar-Menu-sidebar.css">
     <link rel="stylesheet" href="assets/css/sidebar-menu.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/textarea.css">
@@ -23,11 +26,15 @@
 <body class="bg-dark">
     <!-- Start: Juvi - Push Empty Space 20px -->
     <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
-    <h1 class="text-white" style="padding-bottom: 0px;margin-top: 147px;padding-left: 0px;margin-left: 796px;">Login</h1><label class="form-label text-white-50" style="padding-bottom: 0px;padding-top: 0px;padding-left: 28px;margin-top: 5px;margin-left: 746px;">Email:</label><!-- Start: Juvi - Push Empty Space 20px -->
+    <h1 class="text-white" style="padding-bottom: 0px;margin-top: 147px;padding-left: 0px;margin-left: 796px;">Login</h1>
+    <label class="form-label text-white-50" style="padding-bottom: 0px;padding-top: 0px;padding-left: 28px;margin-top: 5px;margin-left: 746px;">Email:</label>
+    <input type="email" id="email" name="email" style="width: 300px; height: 10px;"><br><br><!-- Start: Juvi - Push Empty Space 20px -->
     <div class="Push-20"><label class="form-label text-white-50" style="padding-left: 0px;padding-bottom: 0px;margin-bottom: -1px;padding-top: 0px;margin-top: -2px;margin-left: 749px;">Password:</label><!-- Start: Juvi - Push Empty Space 20px -->
+        <input type="Password" id="Password" name="Password" style="width: 300px; height: 10px;">
         <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
-    </div><!-- End: Juvi - Push Empty Space 20px --><a class="d-block" href="#" style="margin-left: 745px;margin-top: 14px;">Forgot password?</a><!-- Start: Juvi - Push Empty Space 20px -->
-    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><label class="form-label text-white bg-warning float-start" style="padding-right: 23px;padding-left: 26px;margin-left: 725px;">Log In</label><a class="btn btn-primary bg-warning" role="button" href="Sign%20up%20Page.html" style="margin-left: 26px;padding-left: 19px;padding-right: 18px;margin-bottom: 0px;padding-bottom: 0px;padding-top: 6px;margin-top: -2px;">Sign up</a>
+    </div><!-- End: Juvi - Push Empty Space 20px --><a class="d-block" href="Forgot%20Password.html" style="margin-left: 745px;margin-top: 14px;">Forgot password?</a><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><label class="form-label text-white bg-warning float-start" style="padding-right: 23px;padding-left: 26px;margin-left: 725px;">Log In</label><a class="btn btn-primary bg-warning" role="button" href="Sign%20up%20Page.html" style="margin-left: 26px;padding-left: 19px;padding-right: 18px;margin-bottom: 0px;padding-bottom: 0px;padding-top: 6px;margin-top: -2px;">Sign up</a><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><img src="assets/img/loginPic%201.png" style="margin-left: -2px;padding-right: 120px;margin-right: 98px;margin-top: -446px;"><img src="assets/img/Ellipse%203.png" style="margin-bottom: 370px;margin-left: -14px;"><img src="assets/img/Ellipse%201.png" style="margin-left: 34px;margin-bottom: 376px;"><img src="assets/img/Ellipse%204.png" style="margin-left: 50px;margin-bottom: 376px;">
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
     <script src="assets/js/sidebar-menu.js"></script>
