--- a/Notification.html
+++ b/Notification.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="text-dark" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -24,31 +24,31 @@
 </head>
 
 <body class="bg-dark">
-    <header></header><!-- Start: Section Title -->
-    <div class="text-white-50 bg-dark title-div">
-        <h1>Notification</h1>
+    <!-- Start: Section Title -->
+    <div class="bg-dark title-div">
+        <h1 class="fs-4 text-light bg-dark">Notification</h1>
     </div><!-- End: Section Title -->
     <!-- Start: Black Navbar -->
-    <nav class="navbar navbar-light navbar-expand-md navbar-fixed-top navigation-clean-button" style="background: rgb(34, 34, 34);border-radius: 20;border-top-left-radius: 20;border-top-right-radius: 20;border-bottom-right-radius: 20;border-bottom-left-radius: 20;border-style: none;padding-top: 0;margin-bottom: -5px;padding-bottom: 0px;">
-        <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><i class="fa fa-bars"></i>
-            <div><a class="navbar-brand" href="#"> </a></div>
+    <nav class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button" style="background: rgb(34, 34, 34);border-radius: 20;border-top-left-radius: 20;border-top-right-radius: 20;border-bottom-right-radius: 20;border-bottom-left-radius: 20;border-style: none;padding-top: 0;padding-bottom: 10px;">
+        <div class="container"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div><a class="navbar-brand" href="#"><span><i class="fa fa-bars"></i></span> </a></div>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(255,255,255);">
                 <ul class="navbar-nav nav-right">
-                    <li class="nav-item"><a class="nav-link active" href="Notification.html" style="color: rgba(224,217,217,0.9);">Home</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: rgba(224,217,217,0.9);">Category</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="services.html">Price Packages</a><a class="dropdown-item" href="#">Order Services</a><a class="dropdown-item" href="#">Custom Request</a></div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="about.html" style="color: rgba(224,217,217,0.9);">Calender</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html" style="color: rgba(224,217,217,0.9);">Notification</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html" style="color: rgba(224,217,217,0.9);">Your Event</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="home.html" style="color: rgba(224,217,217,0.9);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="calendar.html" style="color: rgba(224,217,217,0.9);">Calendar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Notification.html" style="color: rgba(224,217,217,0.9);">Notification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Your event.html" style="color: rgba(224,217,217,0.9);">Your event</a></li>
                 </ul><!-- Start: Actions -->
-                <p class="ms-auto navbar-text actions"><a class="login" href="login.html" style="color: rgba(224,217,217,0.9);">Log In</a> <a class="btn btn-light action-button" role="button" href="signup.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200);border-radius: 10px;border-style: solid;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Sign Up</a></p><!-- End: Actions -->
+                <p class="ms-auto navbar-text actions"><a class="login" role="button" href="Login Page.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200); border-radius: 10px   ;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Log In</a> 
+                    <a class="btn btn-light action-button" role="button" href="Sign Up Page.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200);border-radius: 10px;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Sign Up</a></p><!-- End: Actions -->
             </div>
         </div>
-    </nav><!-- End: Black Navbar --><img class="float-end" src="assets/img/chshort21black.png" width="200" height="150" style="padding-top: 0px;margin-bottom: 0px;margin-right: 52px;margin-top: 31px;"><img class="float-end" style="padding-left: 0px;margin-left: 2px;margin-right: -208px;margin-bottom: -1px;margin-top: 193px;" src="assets/img/1628804915-img4096.jpg" width="200" height="150"><label class="form-label float-end" style="padding-top: 0px;padding-left: 1px;padding-right: 0px;margin-bottom: 0px;margin-right: -175px;margin-left: -2px;margin-top: 346px;">Stake, Stir &amp; Rainbow</label><label class="form-label float-end" style="padding-top: 0px;padding-left: 7px;padding-right: 0px;margin-left: -6px;margin-right: -202px;margin-top: 152px;">Calgary's Biggest Hackathon</label><img class="float-end" style="padding-top: 0px;margin-right: -238px;margin-top: 382px;padding-left: 0px;margin-left: -5px;" src="assets/img/1628196128-niccandnick-7e8a9cd8-29eb-eb11-a9d5-0edcbcd33718-copy-2.jpeg" width="246" height="150"><label class="form-label text-end text-sm-end text-md-end text-lg-end text-xl-end text-xxl-end border-1 float-end" style="padding-bottom: 0px;margin-bottom: 15px;margin-top: 553px;margin-left: 0px;margin-right: -249px;">Calgary Underground Film Festival&nbsp;&nbsp;</label><!-- Start: Sidebar Menu -->
-    <div id="wrapper"></div><!-- End: Sidebar Menu -->
-    <div></div>
+    </nav><!-- End: Black Navbar -->
+    <!-- Start: Lightbox Gallery -->
+  
+    </section><!-- End: Lightbox Gallery -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
     <script src="assets/js/sidebar-menu.js"></script>
 </body>
