--- a/Your event.html
+++ b/Your event.html
@@ -34,15 +34,12 @@
             <div><a class="navbar-brand" href="#"><span><i class="fa fa-bars"></i></span> </a></div>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(255,255,255);">
                 <ul class="navbar-nav nav-right">
-                    <li class="nav-item"><a class="nav-link active" href="Your%20event.html" style="color: rgba(224,217,217,0.9);">Home</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: rgba(224,217,217,0.9);">Category</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="services.html">Price Packages</a><a class="dropdown-item" href="#">Order Services</a><a class="dropdown-item" href="#">Custom Request</a></div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="about.html" style="color: rgba(224,217,217,0.9);">Calendar</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html" style="color: rgba(224,217,217,0.9);">Notification</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html" style="color: rgba(224,217,217,0.9);">Your event</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="home.html" style="color: rgba(224,217,217,0.9);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="calendar.html" style="color: rgba(224,217,217,0.9);">Calendar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Notification.html" style="color: rgba(224,217,217,0.9);">Notification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Your event.html" style="color: rgba(224,217,217,0.9);">Your event</a></li>
                 </ul><!-- Start: Actions -->
-                <p class="ms-auto navbar-text actions"><a class="login" href="login.html" style="color: rgba(224,217,217,0.9);">Log In</a> <a class="btn btn-light action-button" role="button" href="signup.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200);border-radius: 10px;border-style: solid;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Sign Up</a></p><!-- End: Actions -->
+                <p class="ms-auto navbar-text actions"><a class="login" role="button" href="Login Page.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200); border-radius: 10px   ;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Log In</a> <a class="btn btn-light action-button" role="button" href="signup.html" style="color: rgba(0,0,0,0.9);background: var(--bs-gray-200);border-radius: 10px;border-style: solid;border-color: rgba(0,0,0,0.9);font-size: 16px;padding: 5px 8px;">Sign Up</a></p><!-- End: Actions -->
             </div>
         </div>
     </nav><!-- End: Black Navbar -->
