--- a/book.html
+++ b/book.html
@@ -50,6 +50,7 @@
           center: new google.maps.LatLng(myLatLng),
           zoom: 15,
           mapTypeId: google.maps.MapTypeId.SATELLITE,
+          
         };
         var map = new google.maps.Map(mapCanvas, mapOptions);
         var marker = new google.maps.Marker({
@@ -64,7 +65,7 @@
 
   <body class="bg-dark">
     <div class="bg-dark title-div">
-      <h1 class="fs-4 text-light bg-dark">Home</h1>
+      <h1 class="fs-4 text-light bg-dark">Book</h1>
     </div>
     <nav
       class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button"
