--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         border-bottom-right-radius: 20;
         border-bottom-left-radius: 20;
         border-style: none;
-        padding-top: 0;
+        padding-top: 0; 
         padding-bottom: 10px;
       "
     >
@@ -148,7 +148,7 @@
         <div class="col-md-8 col-xl-6 text-center mx-auto">
           <h2>
             <span style="color: rgb(255, 255, 255)"
-              >Welcome to the Main Event</span
+              ><img height="450" width="450" src="/assets/img/poster.png"></img></span
             >
           </h2>
           <p class="w-lg-50">
