--- a/calendar.html
+++ b/calendar.html
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="about.html" style="color: rgba(224, 217, 217, 0.9)">Calendar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="faq.html" style="color: rgba(224, 217, 217, 0.9)">Notification</a>
+                        <a class="nav-link" href="Notification.html" style="color: rgba(224, 217, 217, 0.9)">Notification</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="yourEvents.html" style="color: rgba(224, 217, 217, 0.9)">Your
