--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="faq.html"
+                href="Notification.html"
                 style="color: rgba(224, 217, 217, 0.9)"
                 >Notification</a
               >
