--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:300,400,700">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Advanced-NavBar---Multi-dropdown.css">
     <link rel="stylesheet" href="assets/css/animated-textbox-textbox.css">
     <link rel="stylesheet" href="assets/css/animated-textbox.css">
@@ -15,13 +16,23 @@
     <link rel="stylesheet" href="assets/css/Juvi---Push-Empty-Space-20px.css">
     <link rel="stylesheet" href="assets/css/NZ---TextboxLabel.css">
     <link rel="stylesheet" href="assets/css/Section-Title.css">
+    <link rel="stylesheet" href="assets/css/Sidebar-Menu-1.css">
+    <link rel="stylesheet" href="assets/css/Sidebar-Menu-sidebar.css">
     <link rel="stylesheet" href="assets/css/sidebar-menu.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/textarea.css">
 </head>
 
-<body>
-    <h1>Signup</h1>
+<body class="bg-dark">
+    <!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
+    <h1 class="text-white" style="padding-bottom: 0px;margin-top: 147px;padding-left: 0px;margin-left: 711px;">Sign Up</h1><label class="form-label text-white-50" style="padding-bottom: 0px;padding-top: 0px;padding-left: 28px;margin-top: 5px;margin-left: 746px;">Email:</label><input type="email" id="email" name="email" style="width: 300px; height: 10px;"><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"><label class="form-label text-white-50" style="padding-left: 0px;padding-bottom: 0px;margin-bottom: -1px;padding-top: 0px;margin-top: -2px;margin-left: 749px;">Password:</label><input type="password" id="password" name="password" style="width: 300px; height: 10px;"><!-- Start: Juvi - Push Empty Space 20px -->
+        <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
+    </div><!-- End: Juvi - Push Empty Space 20px -->
+    <!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><label class="form-label text-white bg-warning float-start" style="padding-right: 23px;padding-left: 26px;margin-left: 725px;">Sign Up</label><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><img src="assets/img/loginPic%201.png" style="margin-left: -2px;padding-right: 120px;margin-top: -446px;margin-right: 30px;"><img src="assets/img/Ellipse%203.png" style="margin-left: -14px;padding-left: 0px;margin-right: -16px;margin-bottom: 434px;"><img src="assets/img/Ellipse%201.png" style="margin-left: 34px;margin-bottom: 435px;"><img src="assets/img/Ellipse%204.png" style="margin-bottom: 439px;margin-right: 3px;padding-left: 0px;margin-left: 19px;">
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
     <script src="assets/js/sidebar-menu.js"></script>
