--- a/yourEvents.html
+++ b/yourEvents.html
@@ -50,7 +50,7 @@
         border-bottom-right-radius: 20;
         border-bottom-left-radius: 20;
         border-style: none;
-        padding-top: 0;
+        padding-top: 0; 
         padding-bottom: 10px;
       "
     >
@@ -73,14 +73,14 @@
         <div
           class="collapse navbar-collapse"
           id="navcol-1"
-          style="color: rgb(255, 255, 255)"
+          style="color: rgb(72, 72, 72)"
         >
           <ul class="navbar-nav nav-right">
             <li class="nav-item">
               <a
                 class="nav-link active"
                 href="index.html"
-                style="color: rgba(224, 217, 217, 0.9)"
+                style="color: rgba(57, 53, 53, 0.9)"
                 >Home</a
               >
             </li>
@@ -88,15 +88,15 @@
               <a
                 class="nav-link"
                 href="viewEvents.html"
-                style="color: rgba(224, 217, 217, 0.9)"
+                style="color: rgba(57, 53, 53, 0.9)"
                 >View Events</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="about.html"
-                style="color: rgba(224, 217, 217, 0.9)"
+                href="calendar.html"
+                style="color: rgba(57, 53, 53, 0.9)"
                 >Calendar</a
               >
             </li>
@@ -104,7 +104,7 @@
               <a
                 class="nav-link"
                 href="Notification.html"
-                style="color: rgba(224, 217, 217, 0.9)"
+                style="color: rgba(57, 53, 53, 0.9)"
                 >Notification</a
               >
             </li>
@@ -112,33 +112,14 @@
               <a
                 class="nav-link"
                 href="yourEvents.html"
-                style="color: rgba(224, 217, 217, 0.9)"
+                style="color: rgba(57, 53, 53, 0.9)"
                 >Your event</a
               >
             </li>
           </ul>
           <p class="ms-auto navbar-text actions">
-            <a
-              class="login"
-              href="login.html"
-              style="color: rgba(224, 217, 217, 0.9)"
-              >Log In</a
-            >
-            <a
-              class="btn btn-light action-button"
-              role="button"
-              href="signup.html"
-              style="
-                color: rgba(0, 0, 0, 0.9);
-                background: var(--bs-gray-200);
-                border-radius: 10px;
-                border-style: solid;
-                border-color: rgba(0, 0, 0, 0.9);
-                font-size: 16px;
-                padding: 5px 8px;
-              "
-              >Sign Up</a
-            >
+            <a href="login.html" class="btn btn" role="button">Log In</a>
+            <a href="signup.html" class="btn btn-light" role="button">Sign Up</a>
           </p>
         </div>
       </div>
