--- a/Sign Up Page.html
+++ b/Sign Up Page.html
@@ -31,7 +31,7 @@
         <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px -->
     </div><!-- End: Juvi - Push Empty Space 20px -->
     <!-- Start: Juvi - Push Empty Space 20px -->
-    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><label class="form-label text-white bg-warning float-start" style="padding-right: 23px;padding-left: 26px;margin-left: 725px;">Sign Up</label><!-- Start: Juvi - Push Empty Space 20px -->
+    <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><a href="Login Page.html" class="btn btn-primary bg-warning" style="padding-right: 23px;padding-left: 26px;margin-left: 725px;">Sign Up</a><!-- Start: Juvi - Push Empty Space 20px -->
     <div class="Push-20"></div><!-- End: Juvi - Push Empty Space 20px --><img src="assets/img/loginPic%201.png" style="margin-left: -2px;padding-right: 120px;margin-top: -446px;margin-right: 30px;"><img src="assets/img/Ellipse%203.png" style="margin-left: -14px;padding-left: 0px;margin-right: -16px;margin-bottom: 434px;"><img src="assets/img/Ellipse%201.png" style="margin-left: 34px;margin-bottom: 435px;"><img src="assets/img/Ellipse%204.png" style="margin-bottom: 439px;margin-right: 3px;padding-left: 0px;margin-left: 19px;">
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
