--- a/book.html
+++ b/book.html
@@ -210,8 +210,7 @@
           </h2>
           <p class="w-lg-50">
             <span style="color: rgb(255, 255, 255)"
-              >Curae hendrerit donec commodo hendrerit egestas tempus, turpis
-              facilisis nostra nunc. Vestibulum dui eget ultrices.</span
+              >Explore your Main Event, along with other local businesses and gatherings.</span
             >
           </p>
         </div>
