--- a/Notification.html
+++ b/Notification.html
@@ -152,7 +152,7 @@
 <script src="assets/js/bs-init.js"></script>
 <script src="assets/js/Advanced-NavBar---Multi-dropdown.js"></script>
 <script src="assets/js/sidebar-menu.js"></script>
-<script src="/js/check.js"></script>
+<script src="/assets/js/check.js"></script>
 </body>
 
 </html>
