--- a/specificD.html
+++ b/specificD.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="assets/css/Section-Title.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/calendarCss.css" />
-    <script src="/backend/CalenderEvents.js"></script>
+    <link rel="stylesheet" href="assets/css/specificD.css" />
 </head>
 
 <body class="bg-dark" onload="retrieve()">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
         </section>
-        <section id="display">
+        <section class="b" id="display">
 
         </section>
     </section>
