--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             </div>
             <h4 class="card-title">Why Downtown?</h4>
             <p class="card-text">
-              Erat netus est hendrerit, nullam et quis ad cras porttitor
-              iaculis. Bibendum vulputate cras aenean.
+              Downtown is the heart of city,representing Calgarian Life and culture. 
+              We chose downtown to promote downtown revitalization and help in solving the problems for many businesses in downtown.
             </p>
           </div>
         </div>
@@ -103,10 +103,11 @@
             <div
               class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
             </div>
-            <h4 class="card-title">Inclusive Festivities.</h4>
+            <h4 class="card-title">Inclusive Festivities</h4>
             <p class="card-text">
-              Erat netus est hendrerit, nullam et quis ad cras porttitor
-              iaculis. Bibendum vulputate cras aenean.
+              Calgary is third most diverse city in Canada. It is multicultural city and celeberates all events together.
+              
+
             </p>
           </div>
         </div>
@@ -117,10 +118,10 @@
             <div
               class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
             </div>
-            <h4 class="card-title">Support local.</h4>
+            <h4 class="card-title">Support local</h4>
             <p class="card-text">
-              Erat netus est hendrerit, nullam et quis ad cras porttitor
-              iaculis. Bibendum vulputate cras aenean.
+               All events happen in downtown are easily accessible through transit or by walking. It will help to reduce
+               the automobile use. It builds strong community and social relationships.
             </p>
           </div>
         </div>
