--- a/Notification.html
+++ b/Notification.html
@@ -98,13 +98,13 @@
 </head>
 
 <body class="bg-dark">
+
   <!-- Start: Section Title -->
   <div class="bg-dark title-div">
     <h1 class="fs-4 text-light bg-dark" style="display: flex;  
     justify-content: center;  
     align-items: center; ">Notification</h1>
 </div><!-- End: Section Title -->
-
 <nav
       class="navbar navbar-light navbar-expand-md bg-warning navbar-fixed-top navigation-clean-button"
       style="
@@ -120,6 +120,7 @@
       "
     >
       <div class="container">
+     
         <button
           data-bs-toggle="collapse"
           class="navbar-toggler"
@@ -191,10 +192,12 @@
         </div>
       </div>
     </nav>
+    <img src="/assets/img/calendar2.png" alt="Italian Trulli" style="float:right; margin-top:55px;margin-right:200px">
+    <img src="/assets/img/calgary-tower-vector-free-standing-observation-downtown-72156549.jpg" alt="Italian Trulli" style="float:left; max-width: 500px;max-height: 500px;margin-top: 50px;margin-left: 50px;">
 <form class="myForm" >
 
     <fieldset>
-     <legend style="color:white">What is your Category would you like to subscribe to?</legend>
+     <legend style="color:white"> <img src="/assets/img/baseline_notifications_white_24dp.png" alt="Italian Trulli" style="float:left; ">What is your Category would you like to subscribe to?</legend>
      <br>
     <label class="choice" style="color:white">  Athletic/Sport </label>
     <input type="checkbox" name="extras" value="Athletic/Sport" id="check1">
