--- a/signup.html
+++ b/signup.html
@@ -56,7 +56,7 @@
         padding-top: 0px;
         padding-left: 28px;
         margin-top: 5px;
-        margin-left: 746px;
+        margin-left: 749px;
       "
       >Email:</label
     ><input
@@ -89,7 +89,28 @@
     <!-- End: Juvi - Push Empty Space 20px -->
     <!-- Start: Juvi - Push Empty Space 20px -->
     <div class="Push-20"></div>
-    <!-- End: Juvi - Push Empty Space 20px --><a
+    <!-- End: Juvi - Push Empty Space 20px -->
+   <label
+    class="form-label text-white-50"
+    style="
+      padding-left: 0px;
+      padding-bottom: 0px;
+      margin-bottom: -1px;
+      padding-top: 0px;
+      margin-top: -2px;
+      margin-left: 680px;
+    "
+    >Confirm password:</label>
+    <input
+        type="password"
+        id="password"
+        name="password"
+        style="width: 300px; height: 10px"
+      />
+     <!-- Start: Juvi - Push Empty Space 20px -->
+     <div class="Push-20"></div>
+     <!-- End: Juvi - Push Empty Space 20px -->
+    <a
       href="login.html"
       class="btn btn-primary bg-warning"
       style="padding-right: 23px; padding-left: 26px; margin-left: 725px"
